issuer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-model-ingress
  namespace: ai-pedia
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  ingressClassName: traefik
  rules:
    - host: model-192-168-110-12.nip.io
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: api-model
                port:
                  number: 80
            path: /
  # This section is only required if TLS is to be enabled for the Ingress
  tls:
    - hosts:
      - model-192-168-110-12.nip.io
      secretName: aipedia-nip-tls
